--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
         "@inertiajs/vue3": "^1.2.0",
         "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^5.0.5",
-        "bootstrap": "^5.3.3",
-        "bootstrap-vue-3": "^0.3.12"
+        "bootstrap": "^5.3.3"
     }
 }
